???? 0.8.11

    user visible changes, client:

    user visible changes, admin:

    programmer visible changes:
    * Removed variable __CHECKOUT_FOLDER__, it is totaly replaced by $(ROOT_LINKS_FOLDER_REPO)/Base.
    * Moved pyinstaller build scripts to inside the instl repository

13/3/2014 0.8.10  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Main feature: support for Windows XP.
    * Fixed: COPY_TOOL set to xcopy was ignored (WinXP).
    * Solved weird problems with xcopy. The /EXCLUDE option of xcopy cannot except a file with space it's path,
        nor will it except a quoted path. So the excludes file is copied to each and every target folder
        during the copy stage.
    * Fixed: when compiled raised exceptions would not cause exit code > 0 (Windows).
    * Fixed: Redundant messages when checksum fails.
    * Shorter max time for curl since now no file is > 5MB.
    * Fixed a bug in function need_to_download_file where True was always returned. This caused already downloaded files
        to be redownloaded if some situations.
    * PARALLEL_SYNC: 32 - new default

    user visible changes, admin:
    * More concise messages for create-links and up2s3

    programmer visible changes:
    * Moved the initialization of copytool to after reading the main yaml file.
    * Fixed: Some inconsitancies in CopyTool_win_xcopy commands.
    * New variables: XCOPY_EXCLUDE_FILE_NAME, XCOPY_EXCLUDE_FILE_PATH to overcome xcopy limitations.
    * New copy tools methods begin_copy_folder, end_copy_folder  to overcome xcopy limitations.
    * Changes to variable names:
         LOCAL_SYNC_DIR now always refers to the to top level sync dirs - above repo sync dir.
         LOCAL_REPO_SYNC_DIR - new - defaults to $(LOCAL_SYNC_DIR)/$(REPO_NAME), e.g. /Users/shai/Library/Caches/Waves Audio/instl/instl.waves.com/V9_test
         SOURCE_PREFIX - new - defaults to $(TARGET_OS)
         LOCAL_BOOKKEEPING_PATH - renamed LOCAL_REPO_BOOKKEEPING_DIR